More test for MapBuilder -- all methods covered